# NiceEngine

./: CMakeLists.txt  DOCS.md  LICENSE.md  NiceEngine.hpp  README.md
Examples/: CMakeLists.txt  Example1.cpp  Example2.cpp
NiceEngine/Builtins/Components/: Animation.hpp  Rotation.hpp  Texture.hpp  Transform.hpp
NiceEngine/Builtins/Systems/: render_textures.cpp  render_textures.hpp  render_transforms.cpp  render_transforms.hpp
NiceEngine/Core/: BaseEventHandler.cpp  BaseEventHandler.hpp  Engine.cpp  Engine.hpp  ErrorWatcher.cpp  ErrorWatcher.hpp  Graphics.cpp  Graphics.hpp
NiceEngine/SceneManagement/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
NiceEngine/include/: entt.hpp
